fix(icon): fix icon vertical alignment within md-button.
*  Fixed comment about vertical alignment
*  Narrow selector to affected cases

Closes #8066. Closes #8194.

--- a/src/components/button/button.scss
+++ b/src/components/button/button.scss
@@ -171,6 +171,15 @@ button.md-button::-moz-focus-inner {
   }
 }
 
+// Using `display:block;` is required for correct vertical alignment
+// because '.md-button' uses `display:inline-block;`.
+.md-button.md-icon-button,
+button.md-button.md-fab {
+  md-icon {
+    display: block;
+  }
+}
+
 ._md-toast-open-top {
   .md-button.md-fab-top-left,
   .md-button.md-fab-top-right {
